<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/record_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/record_TXT_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TopTen_Table"
            android:textSize="25sp"
            android:textColor="@color/progressbarcolor"
            android:paddingTop="15dp"/>
        <FrameLayout
            android:id="@+id/record_LAY_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="#45454545" />
        <TextView
            android:id="@+id/location_TXT_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="25sp"
            android:textColor="@color/progressbarcolor"
            android:paddingTop="0dp"/>
        <FrameLayout
            android:id="@+id/record_LAY_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="24dp"
            android:background="#45454545" />


    </LinearLayout>

</RelativeLayout>