<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="5dp"
    android:paddingRight="16dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/topTen_IMG_list"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/won"
        />

    <TextView
        android:id="@+id/topTen_TXT_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/topTen_IMG_list"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/topTen_IMG_list"
        android:ellipsize="end"
        android:text="@string/Name"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/topTen_TXT_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:maxLines="2"
        android:text="9"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/topTen_IMG_list"
        android:layout_below="@id/topTen_TXT_name"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/topTen_TXT_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:text="@string/Your_score"
            android:textSize="12sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/topTen_TXT_scorePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/topTen_TXT_score"
            android:maxLines="1"
            android:text="9"
            android:textSize="12sp"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>