<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/main_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="0"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/main_LBL_score_player_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/yellow"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/main_IMG_player_A"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/player"
                android:src="@drawable/player_boy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/game_name"
                android:textColor="@color/dark_green_700"
                android:textSize="50sp" />

            <ProgressBar
                android:id="@+id/main_PGR_game_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="8dip"
                android:indeterminateOnly="false"
                android:max="100"
                android:progressDrawable="@drawable/progress_bar_states" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/main_IMG_player_A_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card"
                    android:src="@drawable/player_boy" />


                <ImageView
                    android:id="@+id/main_IMG_player_B_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card"
                    android:src="@drawable/player_computer" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/main_BTN_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="@drawable/play_button_background"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/play_button_timer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/main_LBL_score_player_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_score"
                android:textColor="@color/yellow"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/main_IMG_player_B"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/player"
                android:src="@drawable/player_computer" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>